fix(render): better spacing on popup

--- a/apps/render/src/components/books/card/popup.module.scss
+++ b/apps/render/src/components/books/card/popup.module.scss
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    margin: 12px;
+    margin: 12px 16px 16px 12px;
   }
 }
 
@@ -45,7 +45,7 @@
 }
 
 .title {
-  line-height: 1.1;
+  line-height: 1;
 }
 
 .subtitle {
@@ -62,7 +62,7 @@
   color: var(--color-mid);
   font-size: 0.7rem;
   line-height: 1.2;
-  padding-bottom: 4px;
+  padding-bottom: 6px;
 }
 
 .description {
@@ -70,7 +70,7 @@
   color: var(--color-mid);
   display: -webkit-box;
   font-size: 0.8rem;
-  -webkit-line-clamp: 14;
+  -webkit-line-clamp: 13;
   line-height: 1.4;
   overflow: hidden;
   text-overflow: ellipsis;
